avoid scrollbar

--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-:root {
-  --bg-color: #0d1117;
-  --fg-color: #c9d1d9;
-}
-
 *,
 *::after,
 *::before {
@@ -10,5 +5,8 @@
 }
 
 body {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
 }
